# c-allocators

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  double_stack_allocator.c  double_stack_allocator.h  stack_allocator.h
src/: CMakeLists.txt  double_stack_allocator.c  double_stack_allocator.h  stack_allocator.c  stack_allocator.h
test/: CMakeLists.txt  double_stack_allocator.c  test_double_stack_allocator.c  test_stack_allocator.c
